# TradersTaxTeam

./: README.md  app.py  pyproject.toml
docs/00_overview/: README.md  assumptions-and-constraints.md  glossary.md  non-goals.md
docs/01_product/: mvp-scope.md  prd.md  pvv.md  risk-register.md
docs/02_architecture/: data-model.md  reconciliation-design.md  rulepack-governance.md  system-architecture.md
docs/03_interfaces/: csv-import-spec.md  export-bundle-spec.md
docs/04_adrs/: ADR-0001-architecture-style-modular-monolith.md  ADR-0002-rulepacks-versioned-curated.md  ADR-0003-reconciliation-gate.md  ADR-0004-storage-postgres-object-store.md  ADR-0005-audit-log-append-only.md  ADR-0006-csv-first-ingestion.md  README.md
docs/05_testing/: README.md  golden-master-tests.md  reconciliation-test-matrix.md  test-strategy.md
docs/06_tax/: act60-notes.md  schedule-c-map.md  trading-tax-model.md
docs/07_runbooks/: import-troubleshooting.md  local-dev-setup.md  reconciliation-troubleshooting.md
src/ledgerflow/: db.py  exports.py  guardrails.py  ingest.py  metrics.py  parse_broker_csv.py  reconcile.py  settings.py  taxes.py
tests/: test_import_hardening.py
