[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerflow"
version = "0.1.0"
description = "Personal trading P&L, expenses, and tax-planning dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.36",
  "pandas>=2.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
